# sample-analyze-bedrock-usage-and-quotas

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
metadata/: fm-list-ap-northeast-1.yml  fm-list-ap-northeast-2.yml  fm-list-ap-northeast-3.yml  fm-list-ap-south-1.yml  fm-list-ap-south-2.yml  fm-list-ap-southeast-1.yml  fm-list-ap-southeast-2.yml  fm-list-ap-southeast-3.yml  fm-list-ap-southeast-4.yml  fm-list-ap-southeast-5.yml  fm-list-ca-central-1.yml  fm-list-ca-west-1.yml  fm-list-eu-central-1.yml  fm-list-eu-central-2.yml  fm-list-eu-north-1.yml  fm-list-eu-west-1.yml  fm-list-eu-west-2.yml  fm-list-eu-west-3.yml  fm-list-me-central-1.yml  fm-list-mx-central-1.yml  fm-list-sa-east-1.yml  fm-list-us-east-1.yml  fm-list-us-east-2.yml  fm-list-us-west-1.yml  fm-list-us-west-2.yml  prefix-mapping.yml  quota-index.csv
src/bedrock_analyzer/: __init__.py  __version__.py
src/bedrock_analyzer/aws/: bedrock.py  bedrock_llm.py  servicequotas.py  sts.py
src/bedrock_analyzer/cli/: analyze.py  refresh.py
src/bedrock_analyzer/core/: analyzer.py  metrics_fetcher.py  output_generator.py  profile_fetcher.py  user_inputs.py
src/bedrock_analyzer/metadata/: fm_list.py  quota_index.py  quota_mapper.py  regions.py
src/bedrock_analyzer/templates/: report.html
src/bedrock_analyzer/utils/: csv_handler.py  ui.py  yaml_handler.py
