[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-usage-analyzer"
version = "0.2.0"
description = "Calculate token usage statistics for Amazon Bedrock models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT-0"}
authors = [
    {name = "AWS Samples"}
]
keywords = ["aws", "bedrock", "cloudwatch", "metrics", "tokens", "usage", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "boto3",
    "numpy",
    "jinja2",
    "pyyaml",
    "defusedcsv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "isort",
]

[project.scripts]
bedrock-analyze = "bedrock_analyzer.cli.analyze:main"
bedrock-refresh = "bedrock_analyzer.cli.refresh:main"
bedrock-test-data = "bedrock_analyzer.cli.test_data:main"

[project.urls]
Homepage = "https://github.com/aws-samples/sample-analyze-bedrock-usage-and-quotas"
Repository = "https://github.com/aws-samples/sample-analyze-bedrock-usage-and-quotas"
Issues = "https://github.com/aws-samples/sample-analyze-bedrock-usage-and-quotas/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bedrock_analyzer = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
